--- a/templates/settings.html
+++ b/templates/settings.html
@@ -2,6 +2,8 @@
 {% block head %}
 <script>
 var times = {{ days|tojson }};
+var classes = {{classes|tojson}};
+var subjects = {{subjects|tojson}};
 </script>
 {% block head2 %}{% endblock %}
 {% endblock %}
