--- a/templates/profile.html
+++ b/templates/profile.html
@@ -65,9 +65,9 @@ $('#sendMessage').on('shown.bs.modal', function () {
 		  			<h3 class="under">Favorite Subjects</h3>
 		  		<!-- </div> -->
 		  		<div class="panel-body">
-				  {{message['subjects']}}<br>
-				  {% for m in message['subjects'] %}
-		  			{{ m.decode('utf8') }}
+				  <br>
+				  {% for m in subjects %}
+		  			{{ m }}<br>
 				  {%endfor%}
 		  		</div>
 		  	</div>
@@ -76,7 +76,9 @@ $('#sendMessage').on('shown.bs.modal', function () {
 		  			<h3 class="under">Favorite Classes</h3>
 		  		<!-- </div> -->
 		  		<div class="panel-body">
-		  			{{message['courses']}}
+		  			{%for c in courses%}
+					ap {{c}}<br>
+					{%endfor%}
 		  		</div>
 		  	</div>
 		  	{% endif %}
